@@ -29,6 +29,7 @@ import java.io.IOException;
 import java.lang.reflect.Type;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -36,7 +37,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.IntStream;
+import java.util.TreeMap;
+import java.util.concurrent.ConcurrentHashMap;
 
 import javafx.beans.property.ObjectProperty;
 import javafx.beans.property.SimpleObjectProperty;
@@ -58,6 +60,7 @@ import javafx.beans.property.SimpleLongProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.collections.ListChangeListener;
+import qupath.lib.analysis.stats.ArrayWrappers;
 import qupath.lib.analysis.stats.Histogram;
 import qupath.lib.color.ColorTransformer;
 import qupath.lib.color.ColorTransformer.ColorTransformMethod;
@@ -68,6 +71,7 @@ import qupath.lib.gui.prefs.PathPrefs;
 import qupath.lib.images.ImageData;
 import qupath.lib.images.servers.ImageServer;
 import qupath.lib.images.servers.PixelType;
+import qupath.lib.regions.RegionRequest;
 
 /**
  * Class used to look after the color transforms that may be applied to an image,
@@ -102,47 +106,57 @@ public class ImageDisplay extends AbstractImageRenderer {
 	// Normalized optical density channels; useful to find the 'predominant' color when selecting stain vectors
 	private RGBNormalizedChannelInfo rgbNormalizedChannelInfo;
 	// Direct (editable) RGB channels
-	private List<ChannelDisplayInfo> rgbDirectChannels = new ArrayList<>();
+	private final List<ChannelDisplayInfo> rgbDirectChannels = new ArrayList<>();
 	// Split (uneditable) RGB channels
-	private List<ChannelDisplayInfo> rgbSplitChannels = new ArrayList<>();
+	private final List<ChannelDisplayInfo> rgbSplitChannels = new ArrayList<>();
 	// Hue, Saturation, Value
-	private List<ChannelDisplayInfo> rgbHsvChannels = new ArrayList<>();
+	private final List<ChannelDisplayInfo> rgbHsvChannels = new ArrayList<>();
 	// Color-deconvolved channels
-	private List<ChannelDisplayInfo> rgbBrightfieldChannels = new ArrayList<>();
+	private final List<ChannelDisplayInfo> rgbBrightfieldChannels = new ArrayList<>();
 	// Chromaticity channels
-	private List<ChannelDisplayInfo> rgbChromaticityChannels = new ArrayList<>();
+	private final List<ChannelDisplayInfo> rgbChromaticityChannels = new ArrayList<>();
 
 	// Image & color transform-related variables
-	private BooleanProperty useGrayscaleLuts = new SimpleBooleanProperty();
-	private BooleanProperty useInvertedBackground = new SimpleBooleanProperty(false);
+	private final BooleanProperty useGrayscaleLuts = new SimpleBooleanProperty();
+	private final BooleanProperty useInvertedBackground = new SimpleBooleanProperty(false);
 
 	private ImageData<BufferedImage> imageData;
-	private ObservableList<ChannelDisplayInfo> channelOptions = FXCollections.observableArrayList();
+	private final ObservableList<ChannelDisplayInfo> channelOptions = FXCollections.observableArrayList();
 
-	private ObservableList<ChannelDisplayInfo> selectedChannels = FXCollections.observableArrayList();
+	private final ObservableList<ChannelDisplayInfo> selectedChannels = FXCollections.observableArrayList();
 	private ChannelDisplayInfo lastSelectedChannel = null;
 
-	private LongProperty changeTimestamp = new SimpleLongProperty(System.currentTimeMillis());
+	private final LongProperty changeTimestamp = new SimpleLongProperty(System.currentTimeMillis());
 	
-	private ObjectBinding<ChannelDisplayMode> displayMode = Bindings.createObjectBinding(() -> calculateDisplayMode(),
+	private final ObjectBinding<ChannelDisplayMode> displayMode = Bindings.createObjectBinding(this::calculateDisplayMode,
 			useGrayscaleLutProperty(), useInvertedBackgroundProperty());
 
-	private static Map<String, HistogramManager> cachedHistograms = Collections.synchronizedMap(new HashMap<>());
+	private static final Map<String, HistogramManager> cachedHistograms = Collections.synchronizedMap(new HashMap<>());
 	private HistogramManager histogramManager = null;
-	private List<BufferedImage> imagesForHistograms = new ArrayList<>(); // Cache images needed to recompute histograms
 
-	private static BooleanProperty showAllRGBTransforms = PathPrefs.createPersistentPreference("showAllRGBTransforms", true);
+	private static final Comparator<RegionRequest> regionComparator = Comparator.comparing(RegionRequest::getPath)
+			.thenComparingInt(RegionRequest::getX)
+			.thenComparingInt(RegionRequest::getY)
+			.thenComparingInt(RegionRequest::getZ)
+			.thenComparingInt(RegionRequest::getT)
+			.thenComparingInt(RegionRequest::getWidth)
+			.thenComparingInt(RegionRequest::getHeight)
+			.thenComparingDouble(RegionRequest::getDownsample);
+
+	private Map<RegionRequest, BufferedImage> imagesForHistograms = new TreeMap<>(regionComparator); // Cache images needed to recompute histograms
+
+	private static final BooleanProperty showAllRGBTransforms = PathPrefs.createPersistentPreference("showAllRGBTransforms", true);
 
 	// Used to store the channel colors before switching to grayscale, so this can be restored later
 	// We use the names rather than the actual channels so that the colors are preserved if the image is changed,
 	// and we still do our best to preserve the matching channels
-	private transient Set<String> beforeGrayscaleChannels = new HashSet<>();
+	private final transient Set<String> beforeGrayscaleChannels = new HashSet<>();
 
 	// Used to store the channel that should be selected when switching to grayscale (optional).
 	// This is useful to develop more intuitive interfaces & prevent surprises when switching to grayscale mode.
 	// For example, this could be in the selected item in a list or table (independent of whether the channel is
 	// shown or hidden).
-	private transient ObjectProperty<ChannelDisplayInfo> switchToGrayscaleChannel = new SimpleObjectProperty<>();
+	private final transient ObjectProperty<ChannelDisplayInfo> switchToGrayscaleChannel = new SimpleObjectProperty<>();
 
 	// Flag when the image data is being set, to prevent other changes or events being processed
 	private boolean settingImageData = false;
@@ -172,9 +186,9 @@ public class ImageDisplay extends AbstractImageRenderer {
 				if (lastSelectedChannel != null)
 					setChannelSelected(lastSelectedChannel, true);
 				else if (!selectedChannels.isEmpty())
-					setChannelSelected(selectedChannels.get(0), true);
+					setChannelSelected(selectedChannels.getFirst(), true);
 				else if (!availableChannels.isEmpty()) {
-					setChannelSelected(availableChannels.get(0), true);
+					setChannelSelected(availableChannels.getFirst(), true);
 				}
 			} else {
 				// Restore the channels that were active before switching to grayscale, if possible
@@ -244,7 +258,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 			lastDisplayJSON = retainDisplaySettings ? toJSON() : null;
 
 			this.imageData = imageData;
-			this.imagesForHistograms = imageData == null ? Collections.emptyList() : getImagesForHistogram(imageData.getServer());
+			this.imagesForHistograms = imageData == null ? Collections.emptyMap() : getImagesForHistogram(imageData.getServer());
 			updateChannelOptions(true);
 			updateHistogramMap();
 			if (imageData != null) {
@@ -596,7 +610,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 	
 	/**
 	 * Set the min/max display values for a specified ChannelDisplayInfo.
-	 * 
+	 * <p>
 	 * The benefit of calling this method is that it will update the ImageData metadata if appropriate.
 	 * 
 	 * @param info
@@ -636,7 +650,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 	}
 
 
-	private ObservableList<ChannelDisplayInfo> selectedChannelsReadOnly = FXCollections.unmodifiableObservableList(selectedChannels);	
+	private final ObservableList<ChannelDisplayInfo> selectedChannelsReadOnly = FXCollections.unmodifiableObservableList(selectedChannels);
 	
 	/**
 	 * {@link ObservableList} containing the channels currently selected for display.
@@ -647,7 +661,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 		return selectedChannelsReadOnly;
 	}
 	
-	private ObservableList<ChannelDisplayInfo> availableChannels = FXCollections.unmodifiableObservableList(channelOptions);
+	private final ObservableList<ChannelDisplayInfo> availableChannels = FXCollections.unmodifiableObservableList(channelOptions);
 	
 	/**
 	 * {@link ObservableList} containing the channels currently available for display.
@@ -661,7 +675,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 
 	/**
 	 * Set the selection of a channel on or off.
-	 * 
+	 * <p>
 	 * If a channel's isAdditive() method returns false, all other selected channels will be cleared.
 	 * Otherwise, other selected channels will be cleared if they are non-additive - but kept if they are additive
 	 * (and therefore can be sensibly displayed in combination with this channel).
@@ -674,7 +688,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 		List<ChannelDisplayInfo> tempSelectedChannels = new ArrayList<>(selectedChannels);
 		if (selected) {
 			// If this channel can't be combined with existing channels, clear the existing ones
-			if (!useColorLUTs() || !channel.isAdditive() || (!tempSelectedChannels.isEmpty()) && !tempSelectedChannels.get(0).isAdditive())
+			if (!useColorLUTs() || !channel.isAdditive() || (!tempSelectedChannels.isEmpty()) && !tempSelectedChannels.getFirst().isAdditive())
 				tempSelectedChannels.clear();
 			if (!tempSelectedChannels.contains(channel))
 				tempSelectedChannels.add(channel);
@@ -685,12 +699,12 @@ public class ImageDisplay extends AbstractImageRenderer {
 		}
 		// For a brightfield image, revert to the original if all channels are turned off
 		if (tempSelectedChannels.isEmpty() && imageData.isBrightfield()) {
-			channel = channelOptions.get(0);
+			channel = channelOptions.getFirst();
 			tempSelectedChannels.add(channel);
 			lastSelectedChannel = channel;
 		}
 		if (lastSelectedChannel == null && !tempSelectedChannels.isEmpty())
-			lastSelectedChannel = tempSelectedChannels.get(0);
+			lastSelectedChannel = tempSelectedChannels.getFirst();
 		
 		selectedChannels.setAll(tempSelectedChannels);
 		saveChannelColorProperties();
@@ -702,10 +716,10 @@ public class ImageDisplay extends AbstractImageRenderer {
 	/**
 	 * Apply the required transforms to a BufferedImage to get the appropriate display.
 	 * imgOutput should always be an RGB image (of some kind), or null if a new image should be created.
-	 * 
+	 * <p>
 	 * imgInput should always be an image of the kind that matches the imgData, e.g. RGB/non-RGB, same number of channels,
 	 * same bit-depth.
-	 * 
+	 * <p>
 	 * Warning: This is not thread-safe.
 	 * Warning #2: imgOutput should be TYPE_INT_RGB
 	 * 
@@ -715,8 +729,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 	 */
 	@Override
 	public BufferedImage applyTransforms(BufferedImage imgInput, BufferedImage imgOutput) {
-		BufferedImage imgResult = applyTransforms(imgInput, imgOutput, selectedChannels, displayMode().getValue());
-		return imgResult;
+        return applyTransforms(imgInput, imgOutput, selectedChannels, displayMode().getValue());
 	}
 	
 	/**
@@ -761,7 +774,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 				
 		// Check if we have any changes to make - if not, just copy the image
 		// Sometimes the first entry of selectedChannels was null... not sure why... this test is therefore to paper over the cracks...
-		if (selectedChannels.size() == 1 && (selectedChannels.get(0) == null || !selectedChannels.get(0).doesSomething()) && !invertBackground && !isGrayscale) {
+		if (selectedChannels.size() == 1 && (selectedChannels.getFirst() == null || !selectedChannels.getFirst().doesSomething()) && !invertBackground && !isGrayscale) {
 			if (imgInput == imgOutput) {
 				return imgOutput;
 			}
@@ -827,10 +840,10 @@ public class ImageDisplay extends AbstractImageRenderer {
 	 * @return a String representation of the pixel's transformed value
 	 */
 	public String getTransformedValueAsString(BufferedImage img, int x, int y) {
-		if (selectedChannels == null || selectedChannels.isEmpty() || selectedChannels.get(0) == null)
+		if (selectedChannels == null || selectedChannels.isEmpty() || selectedChannels.getFirst() == null)
 			return "";
 		if (selectedChannels.size() == 1)
-			return selectedChannels.get(0).getValueAsString(img, x, y);
+			return selectedChannels.getFirst().getValueAsString(img, x, y);
 		
 		String s = null;
 		for (ChannelDisplayInfo channel : channelOptions) {
@@ -852,7 +865,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 
 
 
-	private void updateHistogramMap() throws IOException {
+	private void updateHistogramMap() {
 		ImageServer<BufferedImage> server = imageData == null ? null : imageData.getServer();
 		if (server == null) {
 			histogramManager = null;
@@ -862,7 +875,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 		histogramManager = cachedHistograms.get(server.getPath());
 		if (histogramManager == null) {
 			histogramManager = new HistogramManager(0L);
-			histogramManager.ensureChannels(server, channelOptions, imagesForHistograms);
+			histogramManager.ensureChannels(server, channelOptions, getImagesForHistograms());
 			if (server.getPixelType() == PixelType.UINT8) {
 				channelOptions.parallelStream().filter(c -> !(c instanceof DirectServerChannelInfo)).forEach(channel -> autoSetDisplayRange(channel, false));								
 			} else {
@@ -875,34 +888,19 @@ public class ImageDisplay extends AbstractImageRenderer {
 	}
 
 
-	private List<BufferedImage> getImagesForHistogram(final ImageServer<BufferedImage> server) throws IOException {
+	private Map<RegionRequest, BufferedImage> getImagesForHistogram(final ImageServer<BufferedImage> server) throws IOException {
 		if (server == null)
-			return Collections.emptyList();
-		// Request default thumbnails (at lowest available resolution)
-		int nImages = server.nTimepoints() * server.nZSlices();
+			return Collections.emptyMap();
 		// Try to get the first image 'normally', so that if there is an exception it can be handled
-		var list = new ArrayList<BufferedImage>();
-		list.add(server.getDefaultThumbnail(server.nZSlices()/2, 0));
-		// Ideally, we'd like to build the histogram from all pixels -
-		// but we can't if our image is too big... and shouldn't if it's slow to access (e.g. via OMERO)
-		// So this is a *very* rough way to decide when to accept just a single plane
-		double maxDownsample = server.getDownsampleForResolution(server.nResolutions()-1);
-		double totalBytes = Math.round(server.getWidth()/maxDownsample) * Math.round(server.getHeight()/maxDownsample)
-				* nImages * server.nChannels() * server.getMetadata().getPixelType().getBytesPerPixel();
-		if (nImages > 1 && totalBytes <= 1024*1024*50) {
-			// If we have multiple images, we want to parallelize & return as much as we can
-			IntStream.range(1, nImages).parallel().mapToObj(i -> {
-				int z = i % server.nZSlices();
-				int t = i / server.nZSlices();
-				try {
-					return server.getDefaultThumbnail(z, t);
-				} catch (IOException e) {
-					logger.error("Error requesting thumbnail for {} (z={}, t={})", server.getPath(), z, t, e);
-					return null;
-				}
-			}).filter(Objects::nonNull).forEach(list::add);
-		}
-		return list;
+		Map<RegionRequest, BufferedImage> map = new TreeMap<>(regionComparator);
+		// Request the central slice at the lowest resolution
+		double downsample = server.getDownsampleForResolution(server.nResolutions()-1);
+		var request = RegionRequest.createInstance(server.getPath(), downsample, 0, 0, server.getWidth(), server.getHeight(),
+				server.nZSlices()/2, server.nTimepoints()/2);
+		map.put(request, server.readRegion(request));
+		// Before v0.6.0 we tried to read all z-slices and time points - but this could be much too expensive
+		// (and also require too much memory)
+		return map;
 	}
 
 
@@ -1000,7 +998,32 @@ public class ImageDisplay extends AbstractImageRenderer {
 	public Histogram getHistogram(ChannelDisplayInfo info) {
 		if (info == null || histogramManager == null)
 			return null;
-		return histogramManager.getHistogram(getServer(), info, imagesForHistograms);
+		return histogramManager.getHistogram(getServer(), info, getImagesForHistograms());
+	}
+
+	private Map<RegionRequest, BufferedImage> getImagesForHistograms() {
+		var server = getServer();
+		if (server == null || server.nZSlices() * server.nTimepoints() == imagesForHistograms.size())
+			return imagesForHistograms;
+
+		// Get all the cached tiles we can
+		Map<RegionRequest, BufferedImage> images = new TreeMap<>(regionComparator);
+		int level = server.nResolutions()-1;
+		long nPixelsCached = 0;
+		for (var tile : server.getTileRequestManager().getTileRequestsForLevel(level)) {
+			var img = server.getCachedTile(tile);
+			if (img != null) {
+				nPixelsCached += (long) img.getWidth() * img.getHeight();
+				images.put(tile.getRegionRequest(), img);
+			}
+		}
+		// Get the original histogram pixels
+		long nPixelsBackup = 0;
+		for (var img : imagesForHistograms.values()) {
+			nPixelsBackup += (long) img.getWidth() * img.getHeight();
+		}
+
+		return nPixelsBackup > nPixelsCached ? imagesForHistograms : images;
 	}
 
 	
@@ -1123,7 +1146,7 @@ public class ImageDisplay extends AbstractImageRenderer {
 
 		private String name;
 		private Class<?> cls;
-		private Float minDisplay;
+		private  Float minDisplay;
 		private Float maxDisplay;
 		private Integer color;
 		private Boolean selected;
@@ -1172,17 +1195,25 @@ public class ImageDisplay extends AbstractImageRenderer {
 		}
 	}
 	
-	
+	private static class HistogramForRegions {
+
+		private final Histogram histogram;
+		private final Set<RegionRequest> regions;
+
+		private HistogramForRegions(final Histogram histogram, final Set<RegionRequest> regions) {
+			this.histogram = histogram;
+			this.regions = Set.copyOf(regions);
+		}
+
+	}
 	
 	static class HistogramManager {
 		
 		private static int NUM_BINS = 1024;
 		
-		private Map<String, Histogram> map = Collections.synchronizedMap(new LinkedHashMap<>());
+		private final Map<String, HistogramForRegions> map = Collections.synchronizedMap(new HashMap<>());
 
-		private List<BufferedImage> requiredImages;
-		
-		private long timestamp;
+		private final long timestamp;
 		
 		HistogramManager(long timestamp) {
 			this.timestamp = timestamp;
@@ -1196,7 +1227,8 @@ public class ImageDisplay extends AbstractImageRenderer {
 			return channel.getClass().getName() + "::" + channel.getName();
 		}
 		
-		void ensureChannels(final ImageServer<BufferedImage> server, final List<ChannelDisplayInfo> channels, final List<BufferedImage> imgList) {
+		void ensureChannels(final ImageServer<BufferedImage> server, final List<ChannelDisplayInfo> channels,
+							final Map<RegionRequest, BufferedImage> imgList) {
 
 			// Check what we might need to process
 			List<SingleChannelDisplayInfo> channelsToProcess = new ArrayList<>();
@@ -1204,16 +1236,17 @@ public class ImageDisplay extends AbstractImageRenderer {
 			float serverMax = server.getMetadata().getMaxValue().floatValue();
 			
 			for (ChannelDisplayInfo channel : channels) {
-				Histogram histogram = map.get(getKey(channel));
-				if (histogram != null) {
+				var histogramForRegions = map.get(getKey(channel));
+				if (histogramForRegions != null && histogramForRegions.regions.equals(imgList.keySet())) {
 					 // We have the histogram
 					if (channel instanceof ModifiableChannelDisplayInfo modifiableChannel) {
+						var histogram = histogramForRegions.histogram;
 						modifiableChannel.setMinMaxAllowed(
 								(float)Math.min(0, histogram.getMinValue()), (float)histogram.getMaxValue());
 					}
 					continue;
 				} else if (channel instanceof SingleChannelDisplayInfo singleChannel) {
-					// We need to compute the histogram
+					// We don't have the histogram, but we can compute it
 					channelsToProcess.add(singleChannel);
 					if (channel instanceof ModifiableChannelDisplayInfo modifiableChannel) {
 						modifiableChannel.setMinMaxAllowed(serverMin, serverMax);
@@ -1230,66 +1263,84 @@ public class ImageDisplay extends AbstractImageRenderer {
 			logger.debug("Building {} histograms for {}", channelsToProcess.size(), server.getPath());
 			long startTime = System.currentTimeMillis();
 
-			// Count number of pixels & estimate downsample factor
+			// Count number of pixels
 			int imgWidth, imgHeight;
 			long nPixels = 0;
-			double approxDownsample = 1;
-			for (var img : imgList) {
+			for (var img : imgList.values()) {
 				imgWidth = img.getWidth();
 				imgHeight = img.getHeight();
-				approxDownsample = (double)server.getWidth() / imgWidth;
-				nPixels += ((long)imgWidth * (long)imgHeight);
+				long n = (long)imgWidth * imgHeight;
+				nPixels += n;
 			}
+
+			// Determine stride so that we subsample to have no more than about 10_000_000 values
+			int stride = (int)Math.max(Math.ceil(nPixels / 1e7), 1);
 			
-			if (nPixels > Integer.MAX_VALUE) {
-				logger.warn("Too many pixels required for histogram ({})!  Will truncate to the first {} values", nPixels, Integer.MAX_VALUE);
-				nPixels = Integer.MAX_VALUE;
-			}
-			float[] values = null; // Array needed for values for a particular channel
-			float[] pixels = null; // Array needed for all values if there are multiple thumbnails
-			if (imgList.isEmpty())
-				values = new float[0];
-			else if (imgList.size() > 1)
-				pixels = new float[(int)nPixels];
 			for (SingleChannelDisplayInfo channel : channelsToProcess) {
-				int counter = 0;
-				for (BufferedImage img : imgList) {
-					values = channel.getValues(img, 0, 0, img.getWidth(), img.getHeight(), values);
-					if (pixels != null) {
-						System.arraycopy(values, 0, pixels, counter, Math.min(values.length, Integer.MAX_VALUE-counter));
-					}
-					counter += values.length;
-					if (counter >= Integer.MAX_VALUE)
+				List<ArrayWrappers.ArrayWrapper> wrappers = new ArrayList<>();
+				double minValue = Double.POSITIVE_INFINITY;
+				double maxValue = Double.NEGATIVE_INFINITY;
+				long size = 0;
+				for (BufferedImage img : imgList.values()) {
+					var vals = channel.getValues(img, 0, 0, img.getWidth(), img.getHeight(), null);
+					size += vals.length;
+					if (size >= Integer.MAX_VALUE)
 						break;
+					if (stride == 1) {
+						// Use the entire array
+						wrappers.add(ArrayWrappers.makeFloatArrayWrapper(vals));
+					} else {
+						// Subsample the array to speed things up - and reduce memory requirements
+						wrappers.add(ArrayWrappers.makeFloatArrayWrapper(subsample(vals, stride)));
+					}
+					// Calculate min/max from the full array
+					for (var val : vals) {
+						if (val < minValue)
+							minValue = val;
+						if (val > maxValue)
+							maxValue = val;
+					}
 				}
-				Histogram histogram = new Histogram(pixels == null ? values : pixels, NUM_BINS);
+				Histogram histogram = new Histogram(ArrayWrappers.concatenate(wrappers), NUM_BINS, minValue, maxValue);
 				
 				// If we have more than an 8-bit image, set the display range according to actual values - with additional scaling if we downsampled
-				if (channel instanceof ModifiableChannelDisplayInfo) {
-					float scale = approxDownsample < 2 ? 1 : 1.5f;
+				if (channel instanceof ModifiableChannelDisplayInfo modifiableChannelDisplayInfo) {
+					float scale = server.getDownsampleForResolution(server.nResolutions()-1) < 2 ? 1 : 1.5f;
 					if (!histogram.isInteger() || Math.max(Math.abs(channel.getMaxAllowed()), Math.abs(channel.getMinAllowed())) > 4096) {
-						((ModifiableChannelDisplayInfo)channel).setMinMaxAllowed(
-								(float)Math.min(0, histogram.getMinValue()) * scale, (float)Math.max(0, histogram.getMaxValue()) * scale);
+						modifiableChannelDisplayInfo.setMinMaxAllowed(
+								(float)Math.min(0, minValue) * scale, (float)Math.max(0, maxValue) * scale);
 					}
 				}
 				
-				map.put(getKey(channel), histogram);
+				map.put(getKey(channel), new HistogramForRegions(histogram, imgList.keySet()));
 			}
 			long endTime = System.currentTimeMillis();
 			logger.debug("Histograms built in {} ms", (endTime - startTime));
 		}
 		
-		Histogram getHistogram(final ImageServer<BufferedImage> server, final ChannelDisplayInfo channel, final List<BufferedImage> images) {
+		Histogram getHistogram(final ImageServer<BufferedImage> server, final ChannelDisplayInfo channel, final Map<RegionRequest, BufferedImage> images) {
+			String key = getKey(channel);
 			if (channel instanceof SingleChannelDisplayInfo singleChannel) {
 				// Always recompute histogram for mutable channels
 				if (singleChannel.isMutable()) {
-					map.remove(getKey(channel));
+					map.remove(key);
 				}
 			}
 			ensureChannels(server, Collections.singletonList(channel), images);
-			return map.get(getKey(channel));
+			var histogramForRegions = map.get(key);
+			return histogramForRegions == null ? null : histogramForRegions.histogram;
 		}
 		
+	}
+
+	private static float[] subsample(float[] values, int stride) {
+		if (stride <= 1)
+			return values;
+		float[] arr2 = new float[values.length / stride];
+		for (int i = 0; i < arr2.length; i++) {
+			arr2[i] = values[i * stride];
+		}
+		return arr2;
 	}
 	
 
